[tool.poetry]
name = "nfopng"
version = "0.1.0"
description = ""
authors = ["pcroland <pcroland@protonmail.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^10.1.0"
rich = "^13.6.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ipython = "^8.17.2"

[tool.poetry.scripts]
nfopng = "nfopng:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
